--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,7 @@
 [mypy]
 python_version = 3.9
 ignore_missing_imports = False
-warn_incomplete_stub = False
+warn_incomplete_stub = True
 check_untyped_defs = True
 strict_equality = True
 strict_optional = True
@@ -15,3 +15,6 @@ show_column_numbers = True
 show_error_codes = True
 pretty = True
 exclude = venv|bin|lib
+
+[mypy-flask_cors.*]
+ignore_missing_imports = True
