--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,7 @@ services:
       - "5000:5000"
     expose:
       - "5000"
+    environment:
+      PORT: 5000
     networks:
       - base_network
