--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,3 +14,15 @@ repos:
           flake8-quotes, yesqa]
         language_version: python3.9
         args: ['--config=.flake8']
+  - repo: https://github.com/timothycrosley/isort
+    rev: 4.3.20
+    hooks:
+      - id: isort
+        language_version: python3.9
+        args: ['--check']
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.901
+    hooks:
+      - id: mypy
+        language_version: python3.9
+        args: ['.']
