--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,9 +9,18 @@ repos:
     rev: 3.9.2
     hooks:
       - id: flake8
-        additional_dependencies: [flake8-blind-except, flake8-bugbear, flake8-comprehensions,
-          flake8-debugger, flake8-docstrings, flake8-isort, flake8-polyfill, flake8-pytest,
-          flake8-quotes, yesqa]
+        additional_dependencies: [
+            flake8-blind-except,
+            flake8-bugbear,
+            flake8-comprehensions,
+            flake8-debugger,
+            flake8-docstrings,
+            flake8-isort,
+            flake8-polyfill,
+            flake8-pytest,
+            flake8-quotes,
+            yesqa,
+        ]
         language_version: python3.9
         args: ['--config=.flake8']
   - repo: https://github.com/timothycrosley/isort
