pre commit config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,5 +39,5 @@ repos:
     rev: "v2.3"
     hooks:
       - id: vulture
-        #language_version: python3.9
-        #args: ['.', '--exclude venv,.venv,env,tests', '--min-confidence 90']
+        language_version: python3.9
+        args: ['.', '--exclude venv,.venv,env,tests', '--min-confidence 90']
