--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
     hooks:
       - id: black
         language_version: python3.9
-        args: ['.']
+        args: ['--check', "."]
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.9.2
     hooks:
@@ -29,15 +29,15 @@ repos:
       - id: isort
         language_version: python3.9
         args: ['--check']
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.901
-    hooks:
-      - id: mypy
-        language_version: python3.9
-        args: ['.']
+#  - repo: https://github.com/pre-commit/mirrors-mypy
+#    rev: v0.901
+#    hooks:
+#      - id: mypy
+#        language_version: python3.9
+#        args: ['.']
   - repo: https://github.com/jendrikseipp/vulture
     rev: "v2.3"
     hooks:
       - id: vulture
         language_version: python3.9
-        args: ['.', '--exclude venv,.venv,env,tests', '--min-confidence 90']
+        args: ['.', '--exclude', 'venv,.venv,env,tests', '--min-confidence', '90']
