--- a/mypy.ini
+++ b/mypy.ini
@@ -21,3 +21,12 @@ ignore_missing_imports = True
 
 [mypy-flasgger.*]
 ignore_missing_imports = True
+
+[mypy-mongoengine.*]
+ignore_missing_imports = True
+
+[mypy-pydash.*]
+ignore_missing_imports = True
+
+[mypy-flask_bcrypt.*]
+ignore_missing_imports = True
