--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,12 +23,12 @@ repos:
         ]
         language_version: python3.9
         args: ['--config=.flake8']
-#  - repo: https://github.com/timothycrosley/isort
-#    rev: 4.3.20
-#    hooks:
-#      - id: isort
-#        language_version: python3.9
-#        args: ['--check']
+  - repo: https://github.com/timothycrosley/isort
+    rev: 5.4.2
+    hooks:
+      - id: isort
+        language_version: python3.9
+        args: ['--check']
 #  - repo: https://github.com/pre-commit/mirrors-mypy
 #    rev: v0.901
 #    hooks:
