--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,12 +29,12 @@ repos:
       - id: isort
         language_version: python3.9
         args: ['--check']
-#  - repo: https://github.com/pre-commit/mirrors-mypy
-#    rev: v0.901
-#    hooks:
-#      - id: mypy
-#        language_version: python3.9
-#        args: ['.']
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.901
+    hooks:
+      - id: mypy
+        language_version: python3.9
+        args: ['.']
   - repo: https://github.com/jendrikseipp/vulture
     rev: "v2.3"
     hooks:
