--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,12 +13,22 @@ services:
     container_name: tyba_app
     image: tyba_app_image
     build: .
+    depends_on:
+      - db
     volumes:
       - base_data:/app
     ports:
       - "5000:5000"
+    expose:
+      - "5000"
     environment:
       PORT: 5000
-      FLASK_ENV: production
     networks:
       - base_network
+  db:
+      container_name: tyba_db
+      image: mongo
+      networks:
+        - base_network
+      ports:
+        - "27018:27017"
