--- a/mypy.ini
+++ b/mypy.ini
@@ -30,3 +30,6 @@ ignore_missing_imports = True
 
 [mypy-flask_bcrypt.*]
 ignore_missing_imports = True
+
+[mypy-flask_jwt_extended.*]
+ignore_missing_imports = True
