--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,14 @@ flasgger==0.9.5
 Flask==2.0.2
 flask-bcrypt==0.7.1
 Flask-Cors==3.0.10
+flask-jwt-extended==4.3.1
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 mongoengine==0.20.0
 python-dotenv==0.19.2
 pydash==5.1.0
+pymongo[srv]==3.12.3
 six==1.16.0
 Werkzeug==2.0.2
 gunicorn==20.0.4
