--- a/mypy.ini
+++ b/mypy.ini
@@ -33,3 +33,6 @@ ignore_missing_imports = True
 
 [mypy-flask_jwt_extended.*]
 ignore_missing_imports = True
+
+[mypy-flask_restful.*]
+ignore_missing_imports = True
