--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==2.0.2
 flask-bcrypt==0.7.1
 Flask-Cors==3.0.10
 flask-jwt-extended==4.3.1
+flask-restful==0.3.9
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
@@ -15,3 +16,4 @@ six==1.16.0
 Werkzeug==2.0.2
 gunicorn==20.0.4
 sentry-sdk[flask]==1.5.0
+webargs==8.1.0
