--- a/mypy.ini
+++ b/mypy.ini
@@ -36,3 +36,6 @@ ignore_missing_imports = True
 
 [mypy-flask_restful.*]
 ignore_missing_imports = True
+
+[mypy-bson.*]
+ignore_missing_imports = True
