--- a/mypy.ini
+++ b/mypy.ini
@@ -39,3 +39,6 @@ ignore_missing_imports = True
 
 [mypy-bson.*]
 ignore_missing_imports = True
+
+[mypy-googlemaps.*]
+ignore_missing_imports = True
